# TweetsClassification

./: README.md  pyproject.toml
datasets/: x_test.csv  x_train.csv  y_test.csv  y_train.csv
notebooks/: Modelos.ipynb
