[tool.poetry]
name = "twitter"
version = "0.1.0"
description = ""
authors = ["PabloBR99 <pablobrunoromero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
virtualenv = "^20.21.0"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
ipykernel = "^6.22.0"
pandas = "^1.5.3"
translate = "^3.6.1"
googletrans = "^3.0.0"
google-trans-new = "^1.1.9"
deep-translator = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
